style.css
/* ... */
  .main-navigation::after {
    clear: both;
    content: "";
    display: table; }
  .main-navigation > div {
    display: inline-block; }
    .main-navigation > div ul {
      display: none;
      list-style: none;
      margin: 0;
      padding-left: 0; }
      .main-navigation > div ul ul {
        background: #fff;
        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
        float: left;
        opacity: 0;
        padding: 0;
        position: absolute;
        text-align: left;
        top: 50px;
        -webkit-transition: all 0.1s ease-in-out;
        -moz-transition: all 0.1s ease-in-out;
        transition: all 0.1s ease-in-out;
        -webkit-transform-origin: center top;
        -moz-transform-origin: center top;
        -ms-transform-origin: center top;
        -o-transform-origin: center top;
        transform-origin: center top;
        -webkit-transform: scaleY(0);
        -moz-transform: scaleY(0);
        -ms-transform: scaleY(0);
        -o-transform: scaleY(0);
        transform: scaleY(0);
        visibility: hidden;
        z-index: 99999; }
        .header-design-4 .main-navigation > div ul ul {
          top: 33px; }
        .main-navigation > div ul ul ul {
          left: 100%;
          top: 0; }
        .main-navigation > div ul ul li {
          padding: 0; }
          .main-navigation > div ul ul li:hover > ul,
          .main-navigation > div ul ul li.focus > ul {
            left: 100%; }
          .main-navigation > div ul ul li:last-child a {
            border-bottom: 0; }
        .main-navigation > div ul ul a {
          border-bottom: 1px solid #f4f4f4;
          font-family: "Merriweather", serif;
          font-size: 13.8656px;
          font-size: 0.8666rem;
          letter-spacing: normal;
          line-height: normal;
          margin: 0 20px;
          min-width: 150px;
          padding: 15px 0;
          text-transform: none; }
      .main-navigation > div ul li:hover > ul,
      .main-navigation > div ul li.focus > ul {
        opacity: 1;
        -webkit-transform: scaleY(1);
        -moz-transform: scaleY(1);
        -ms-transform: scaleY(1);
        -o-transform: scaleY(1);
        transform: scaleY(1);
        visibility: visible; }
    .main-navigation > div li {
      float: left;
      padding: 2px 45px 0 0;
      position: relative; }
      .main-navigation > div li:last-child {
        padding-right: 0; }
      .main-navigation > div li a {
        text-transform: uppercase;
        color: #626262;
        font-family: "Lato", sans-serif;
        font-size: 12.8px;
        font-size: 0.8rem;
        letter-spacing: 1px;
        line-height: 60px; }
      .main-navigation > div li:hover > a,
      .main-navigation > div li.focus > a {
        color: #2d2d2d; }
    .main-navigation > div a {
      display: block;
      text-decoration: none; }
  .main-navigation .mega-menu .mega-menu-megamenu ul.mega-sub-menu {
    -webkit-transform: scaleY(1);
    -moz-transform: scaleY(1);
    -ms-transform: scaleY(1);
    -o-transform: scaleY(1);
    transform: scaleY(1); }
  .header-design-3 .main-navigation {
    display: inline-block;
    float: none; }
  .header-design-4 .main-navigation {
    display: inline-block;
    float: right;
    padding: calc(60px /2) 0; }
    .header-design-4 .main-navigation > div li a {
      line-height: 30px; }

/*--------------------------------------------------------------
## Social and Search Icons
--------------------------------------------------------------*/
.social-search {
  float: right; }
  .social-search .search-toggle {
    background: transparent;
    border: none;
    line-height: 60px;
    outline: none;
    padding: 0; }
    .social-search .search-toggle .open {
      display: block; }
      .social-search .search-toggle .open .svg-icon-search {
        height: 16px;
        position: relative;
        top: 5px;
        width: 17px; }
        .social-search .search-toggle .open .svg-icon-search path {
          fill: #626262; }
    .social-search .search-toggle .close {
      display: none; }
      .social-search .search-toggle .close .svg-icon-close {
        height: 16px;
        width: 16px;
        position: relative;
        top: 5px; }
        .social-search .search-toggle .close .svg-icon-close path {
          fill: #626262; }
    .social-search .search-toggle.close-search .open {
      display: none; }
    .social-search .search-toggle.close-search .close {
      display: block; }
  .social-search .widget {
    display: inline-block; }
  .social-search .v-line {
    background: #ebebeb;
    display: inline-block;
    height: 10px;
    line-height: 60px;
    margin: 0 8px;
    width: 1px; }
  .header-design-3 .social-search,
  .header-design-4 .social-search {
    float: none; }
    .header-design-3 .social-search .v-line,
    .header-design-4 .social-search .v-line {
      display: none; }
    .header-design-3 .social-search .search-toggle,
    .header-design-4 .social-search .search-toggle {
      float: right;
      line-height: 45px; }

/*--------------------------------------------------------------
## Mobile Menu
--------------------------------------------------------------*/
.main-navigation > div ul {
  display: none; }

.menu-toggle {
  display: block;
  border: 0;
  background: transparent;
  line-height: 60px;
  outline: none;
  padding: 0; }
  .menu-toggle .svg-icon-menu {
    vertical-align: middle;
    width: 22px; }
    .menu-toggle .svg-icon-menu path {
      fill: #626262; }

#mobile-navigation {
  left: 0;
  position: absolute;
  text-align: left;
  top: 61px;
  width: 100%;
  z-index: 10; }
  .header-design-2 #mobile-navigation {
    top: 60px; }
  .header-design-3 #mobile-navigation {
    top: 60px; }
  .header-design-4 #mobile-navigation {
    top: 100px; }
  #mobile-navigation ul {
    list-style: none;
    margin: 0;
    padding: 0; }
/* ... */

